Implemented AppSidebar controls

--- a/src/components/IconButton/IconButton.scss
+++ b/src/components/IconButton/IconButton.scss
@@ -60,6 +60,7 @@
                 color: black;
 
                 text-wrap: nowrap;
+                user-select: none;
 
                 margin: 0px;
             }
